IMAP: Fix crash when session is destroyed during password request

This can happen when there's a certificate problem, then the
m_pendingInitialSession is set to null before the onPasswordRequestDone()
is called, which ends up in dereferencing a nullptr in killSession().

BUG: 353653
FIXED-IN: 5.4.1